--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ body {
   background-color: #243447;
 }
 
+#header {
+  position: sticky;
+  top: 0px;
+  z-index: -1;
+}
 
 .h_list {
   display: flex;
@@ -57,37 +62,35 @@ body {
   font-size: 1.1em;
 }
 
-#title_screen {
+#title_image {
   position: sticky;
-  top: 0px;
-  z-index: -1;
+  top: 24px;
+  z-index: -3;
 }
 
-.hero {
-  margin: auto;
-  height: 98vh;
-  background: #EFEFBB;
-  background: -webkit-linear-gradient(to right, #D4D3DD, #EFEFBB);
-  background: linear-gradient(to right, #D4D3DD, #EFEFBB);
+.title_text {
+  position: relative;
+  margin-bottom: -200px;
+  z-index: -2;
 }
 
 #title {
   padding-bottom: .01em;
-  padding-top: 3.2em;
   text-align: center;
   vertical-align: bottom;
   font-family: 'Abril Fatface', serif;
-  font-size: 80px;
+  font-size: 48px;
   text-transform: uppercase;
   font-weight: 800;
   letter-spacing: .1em;
   color: #c51f5d;
+  white-space: nowrap;
 }
 
 #subTitle {
   text-align: center;
   vertical-align: top;
-  font-size: 38px;
+  font-size: 24px;
   font-weight: bold;
   font-family: 'Montserrat', sans-serif;
 }
@@ -145,6 +148,8 @@ body {
 
 .description_text {
   padding: 10px;
+  font-size: 20px;
+  text-align: left;
 }
 
 .image {
@@ -316,8 +321,10 @@ body {
 
 
 /* Media Queries */
+/* assuming there will be nothing viewing my site under 550px wide */
 @media screen and (min-width: 550px) {
   .image { min-width: 500px; }
+  .title_text { bottom: 18em; }
 }
 
 @media screen and (min-width: 768px) {
@@ -326,6 +333,9 @@ body {
   .r_one { margin-left: 20px; }
   .r_three { margin-right: 20px; }
   .list_item { margin: 10px 0 10px 0; }
+  #title { font-size: 80px; }
+  #subtitle { font-size: 38px; }
+  .title_text { bottom: 25em; }
 }
 
 @media screen and (min-width: 990px) {
@@ -341,9 +351,9 @@ body {
 }
 
 @media screen and (min-width: 1280px) {
-
+  .title_text { bottom: 30em; }
 }
 
 @media screen and (min-width: 1440px) {
-
+  .title_text { bottom: 35em; }
 }
